# FFmpeg_learn

./: CMakeLists.txt  README.md  main.cpp
cpp/: AACToPCMDecoder.cpp  AACToPCMDecoder.h  AVFilterLearn.cpp  AVFilterLearn.h  H264Decoder.cpp  H264Decoder.h  Mp4Synthesis.cpp  Mp4Synthesis.h  Mp4ToJPEG.cpp  Mp4ToJPEG.h  PCMToMp3Decoder.cpp  PCMToMp3Decoder.h  YUVToH264.cpp  YUVToH264.h
cpp/audio/: AudioPlayer.cpp  Decoder.cpp  Decoder.h  MediaPlayer.cpp  MediaPlayer.h
cpp/h264/: Base.cpp  Base.h  Derived.cpp  Derived.h  YUV.h
cpp/opengl/: OpenGlWindow.cpp  OpenGlWindow.h
ffmpeg/lib/: libavdevice.58.dylib  libavutil.56.dylib  libpostproc.55.dylib  libswresample.3.dylib
res/: free_aduio.aac  source.h264
